--- a/dondEducar/dondEducar/dondEducar.csproj
+++ b/dondEducar/dondEducar/dondEducar.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\EstablecimientoViewModel.cs" />
+    <Compile Include="ViewModel\FourSquareViewModel.cs" />
     <Compile Include="ViewModel\ListaEstablecimientosViewModel.cs" />
     <Compile Include="ViewModel\Filtro.cs" />
     <Compile Include="ViewModel\IndexViewModel.cs" />
