--- a/dondEducar/dondEducar/Web.config
+++ b/dondEducar/dondEducar/Web.config
@@ -31,7 +31,7 @@
     <add key="aspnet:UseHostHeaderForRequestUrl" value="false" />
   </appSettings>
   <system.web>
-     <customErrors mode="Off" />
+     <!--<customErrors mode="Off" />-->
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
